--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,9 +1,9 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "devCommand": "npm run dev",
+  "outputDirectory": "build",
+  "devCommand": "npm start",
   "installCommand": "npm install",
-  "framework": "vite",
+  "framework": "create-react-app",
   "rewrites": [
     {
       "source": "/(.*)",
