--- a/.gitignore
+++ b/.gitignore
@@ -1,80 +1,30 @@
-# ===================================
-# Python
-# ===================================
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-*.pyc
-
-# Virtual environments
-.venv/
-venv/
-ENV/
-env/
-
-# ===================================
-# Database Files
-# ===================================
-*.db
-*.db-journal
-*.db-shm
-*.db-wal
-manufacturing.db
-app.db
-
-# ===================================
-# Environment Variables
-# ===================================
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-frontend/.env
-!frontend/.env.example
-
-# ===================================
-# IDEs and Editors
-# ===================================
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-.DS_Store
-
-# ===================================
-# Operating System
-# ===================================
-Thumbs.db
+# Logs
+logs
 *.log
-desktop.ini
-
-# ===================================
-# Node/Frontend
-# ===================================
-node_modules/
-frontend/node_modules/
-frontend/dist/
-frontend/build/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# ===================================
-# Deployment
-# ===================================
-.vercel/
-dist/
-build/
-*.egg-info/
+node_modules
+dist
+dist-ssr
+*.local
 
-# ===================================
-# Temporary Files
-# ===================================
-backend/matrices_data.json
-backend/matrices_output.txt
-*.tmp
-*.temp
+# Environment variables
+.env
+.env.local
+.env.production
+.env.development
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
